--- a/api_aluno/package.json
+++ b/api_aluno/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api_tarefas",
+  "name": "api_aluno",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
@@ -14,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.14.2",
+    "mysql2": "^3.14.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
