--- a/api_receitasCulinarias/package.json
+++ b/api_receitasCulinarias/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "api_tarefas",
+  "name": "api_receitasculinarias",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.14.2",
+    "mysql2": "^3.14.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
