--- a/api_tasks/package.json
+++ b/api_tasks/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "api_tarefas",
+  "name": "api_tasks",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/app.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,7 +15,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.14.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
